--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi               ==  2020.12.5
 click                 ==  7.1.2
 Django                ==  3.1.2
 django-crispy-forms   ==  1.11.2
+django-heroku          == 0.3.1
 dlib                   == 19.22.0
 face-recognition       == 1.3.0
 face-recognition-models== 0.3.0
