--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ gunicorn               == 20.1.0
 mysqlclient            == 2.0.1
 numpy                  == 1.20.2
 olefile                == 0.46
+opencv-contrib-python-headless
 Pillow                ==  8.1.2
 psycopg2               == 2.8.5
 pytz                   == 2021.1
